@@ -1,3 +1,5 @@
+- allow right mouse button to restart game (2024/06/22 MS)
+
 2.3:
 - renamed errors to mistakes (2023/07/27 MS)
 - added endless game mode survivor (2023/07/27 MS)
